apps/linkding/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding-ingress-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #TODO: hide the ip like I do for secrets (or ?
    external-dns.alpha.kubernetes.io/target: "188.148.187.53"
    external-dns.alpha.kubernetes.io/hostname: linkding.lab.aminrj.com
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - linkding.lab.aminrj.com
      secretName: linkding-tls
  rules:
    - host: linkding.lab.aminrj.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkding
                port:
                  number: 80
